--- a/css/responsive.css
+++ b/css/responsive.css
@@ -71,13 +71,14 @@
     place-items: center;
   }
   .hero-content h1 {
-    font-size: 40px;
-    line-height: 41px;
+    font-size: 31px;
+    line-height: 34px;
     font-weight: 600;
     text-shadow: 0px 0px 63px black;
   }
   .hero-content h3 {
     text-shadow: 0px 0px 63px black;
+    margin-bottom: 10px;
   }
 }
 
@@ -100,5 +101,20 @@
   }
   .feature-imageVideo {
     width: 80%;
+  }
+  /* footer section */
+  footer nav ul {
+    justify-content: space-between;
+  }
+}
+@media screen and (max-width: 1280px) {
+  footer nav ul {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  footer span:first-child {
+    margin-bottom: 40px;
+  }
+  footer span:last-child {
+    margin-top: 40px;
   }
 }
