--- a/css/responsive.css
+++ b/css/responsive.css
@@ -108,6 +108,20 @@
   }
 }
 @media screen and (max-width: 1280px) {
+  #header {
+    width: 90%;
+  }
+  .hero-content {
+    width: 90%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+  }
+  .feature-nav {
+    width: 90%;
+  }
+  footer {
+    width: 90%;
+  }
   footer nav ul {
     grid-template-columns: repeat(2, 1fr);
   }
