--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html {
-  background-color: black;
+  background-color: #0d1117;
 }
 * {
   padding: 0;
@@ -13,7 +13,7 @@ html {
   background-image: linear-gradient(
       to top,
       rgba(0, 0, 0, 0.8) 0,
-      rgba(0, 0, 0, 0) 60%,
+      rgba(0, 0, 0, 0.5) 60%,
       rgba(0, 0, 0, 0.8) 100%
     ),
     url(https://assets.nflxext.com/ffe/siteui/vlv3/20bf1f4d-1c73-48fd-8689-310d6dd80efc/c189e65a-ee63-4eb2-bf50-a326fa27e2d8/BD-en-20240812-POP_SIGNUP_TWO_WEEKS-perspective_WEB_722e6c5b-1615-42d5-9aa1-7d15a7dda307_large.jpg);
@@ -56,7 +56,7 @@ html {
   font-size: 3rem;
   margin-bottom: 18px;
   letter-spacing: -0.5px;
-  text-shadow: 0px 0px 63px black;
+  text-shadow: 0px 0px 83px black;
 }
 .hero-content h3 {
   font-weight: 400;
@@ -110,7 +110,7 @@ html {
 /** feature section */
 #feature {
   height: 100%;
-  background-color: black;
+  background-color: #0d1117;
   border-bottom: 8px solid #232323;
 }
 .feature-nav {
@@ -140,6 +140,8 @@ html {
   position: relative;
 }
 .featureImg {
+  box-shadow: 1px 1px 8px 5px #ddd;
+  border-radius: 8px;
   width: 100%;
   z-index: 99;
   position: relative;
